--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <title>AWS Opsworks Node.js Example</title>
 </head>
 <body>
-<h1>AWS OpsWorks Node.js Example</h1>
+<h1>AWS OpsWorks Node.js Example + DB connection</h1>
 
 <p>DB_URL: <i><%= DB_URL %></i></p>
 
