added comments and install notes

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AWS Opsworks Node.js Example</title>
+    <title>AWS Opsworks + EB Node.js Example</title>
 </head>
 <body>
 <h1>AWS OpsWorks Node.js Example + DB connection</h1>
